fix: fix dark mode tokens of mobile

--- a/style/mobile/theme/_dark.less
+++ b/style/mobile/theme/_dark.less
@@ -108,7 +108,7 @@
   --td-bg-color-secondarycontainer: var(--td-gray-color-12);          // 色彩 - 次级容器
   --td-bg-color-component: var(--td-gray-color-11);                   // 色彩  - 组件
   --td-bg-color-container-active: var(--td-gray-color-12);            // 色彩 - 容器 - active
-  --td-bg-color-secondarycontainer-active: var(--td-gray-color-9);   // 色彩 - 次级容器 - active
+  --td-bg-color-secondarycontainer-active: var(--td-gray-color-11);   // 色彩 - 次级容器 - active
   --td-bg-color-component-active: var(--td-gray-color-10);             // 色彩 - 组件 - active
   --td-bg-color-component-disabled: var(--td-gray-color-12);          // 色彩 - 组件 - disabled
 
